# caucus

./: .gitignore  AGENT_SETUP.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  SPEC.md  adoption.jsonl  config.example.yaml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codex/: review-config.json  review-rules.md
.github/codex/prompts/: review.md
.github/codex/scripts/: build-review-prompt.mjs  normalize-review-output.mjs  post-review.cjs
.github/workflows/: ci.yml  codex-review.yml  docs.yml  evidence-snapshot.yml  keep-codex-auth-fresh.yml  release.yml
docs/: configuration.md  examples.md  index.md  quickstart.md
evals/: README.md  metrics.py  run.py
evals/results/: RESULTS.md  summary.json
evals/results/raw/: arc_challenge--debate--claude-sonnet-4-6.decisions.jsonl  arc_challenge--panel--claude-sonnet-4-6.jsonl  (+12 more)
examples/decision-memo/: README.md  config.yaml  evidence.sample.json
examples/trading-robinhood/: README.md  briefing_email.html.j2  com.example.caucus.plist  config.yaml  evidence.sample.json  import_campaigns.py  news_evidence.py  run-caucus.sh
src/caucus/: __init__.py  anchor.py  backends.py  briefing.py  cli.py  config.py  engine.py  evidence.py  intents.py  notify.py  record.py  wizard.py
tests/: test_anchor.py  test_briefing.py  test_cli.py  test_config.py  test_engine.py  test_evidence.py  test_intents.py  test_notify.py  test_record.py  test_wizard.py
verifier/go/: canonical.go  go  go.mod  main.go  verify.go  verify_test.go
