[project]
name = "caucus"
version = "0.1.0"
description = "Your AI agents, deliberating on the record. MCP-grounded multi-agent consensus with recorded dissent and an auditable decision log."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Srinath Jukanti" }]
keywords = ["multi-agent", "consensus", "deliberation", "mcp", "audit", "llm"]
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.15",
]

[project.optional-dependencies]
openai = ["openai>=1.50"]

[project.urls]
Repository = "https://github.com/srinath-jukanti/caucus"

[project.scripts]
caucus = "caucus.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caucus"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
